# polycopier

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  scratch.rs
.github/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: TUI.md  WEB_UI.md
src/: api.rs  backoff.rs  clients.rs  config.rs  copy_ledger.rs  lib.rs  listener.rs  main.rs  models.rs  order_watcher.rs  position_scanner.rs  risk.rs  state.rs  strategy.rs  ui.rs  utils.rs  wallet_sync.rs
tests/: api_tests.rs  backoff_tests.rs  cli_tests.rs  copy_ledger_tests.rs  integration.rs  listener_tests.rs  order_watcher_tests.rs  risk_tests.rs  sizing_tests.rs  state_tests.rs  strategy_tests.rs  ui_tests.rs  utils_tests.rs
tests/common/: mod.rs
web/: package-lock.json  package.json
web/src/: App.tsx  SettingsManager.tsx  SetupWizard.tsx  index.css
